--- a/lesson_1/intro-python.ipynb
+++ b/lesson_1/intro-python.ipynb
@@ -231,7 +231,7 @@
     "\n",
     "\"NOT AGAIN!\" he shouts, but his arms do not stop.\n",
     "\n",
-    "This is bad. You suspect liquefactive necrosis of the brain, aka brainrot. This is the first case of brainrot since 2040 when the government banned TikTok. To provide proper treatment, you need to know how long he's had it.\n",
+    "This is bad. You suspect liquefactive necrosis of the brain, aka brainrot. This is the first case of brainrot since 2040 when the government banned TikTok. To provide proper treatment, you need to assess the extent and severity of the brainrot.\n",
     "\n",
     "You recall a recent publication in *Nature* that may be relevant to Cornelius's case..."
    ]
@@ -280,7 +280,7 @@
    "id": "695070ab",
    "metadata": {},
    "source": [
-    "After exactly 45 seconds, Cornelius's arms finally come to rest. He slumps back in his chair, exhausted. \"Doc,\" he says, catching his breath. \"how bad is it?\"\n",
+    "After exactly 45 seconds, Cornelius's arms finally come to rest. He slumps back in his chair, exhausted. \"Doc,\" he says, catching his breath, \"how bad is it?\"\n",
     "\n",
     "You need to classify his condition first. Based on the *Nature* article, you know the classification depends on the episode duration—but you can't just eyeball it. You need to write code that checks the duration and tells you which category the patient falls into.\n",
     "\n",
