--- a/lesson_1/intro-python.ipynb
+++ b/lesson_1/intro-python.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print your follow up question"
+    "# print your follow up question\n"
    ]
   },
   {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "777fcef5",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
     "my_first_name = \"Sophia\"\n",
     "my_last_name = \"Garrett\"\n",
     "\n",
-    "# try printing your name"
+    "# try printing your name\n"
    ]
   },
   {
@@ -202,7 +202,7 @@
    "id": "16d7f643",
    "metadata": {},
    "source": [
-    "Cornelius Pumpernickel eyes light up with curiosity. For some reason, he now wants to know how many letters are in your first and last name. What do you do?\n",
+    "Cornelius Pumpernickel's eyes light up with curiosity. For some reason, he now wants to know how many letters are in your first and last name. What do you do?\n",
     "\n",
     "Try using Google to figure out how you can get the number of letters (aka characters) in a string.\n",
     "\n",
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8746e57e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
     "\n",
     "\"NOT AGAIN!\" he shouts, but his arms do not stop.\n",
     "\n",
-    "This is bad. You suspect liquefactive necrosis of the brain, aka brainrot. This is the first case of brainrot since 2040 when the government banned TikTok. To provide proper treatment, you need to assess the extent and severity of the brainrot.\n",
+    "This is bad. You suspect liquefactive necrosis of the brain, aka brainrot. This is the first case of brainrot since 2694 when the government banned TikTok. To provide proper treatment, you need to assess the extent and severity of the brainrot.\n",
     "\n",
     "You recall a recent publication in *Nature* that may be relevant to Cornelius's case..."
    ]
@@ -347,7 +347,7 @@
    "source": [
     "# create a variable to store the duration of Cornelius's ATIUED episode\n",
     "\n",
-    "# create if/elif/else statements to print Cornelius's classification"
+    "# create if/elif/else statements to print Cornelius's classification\n"
    ]
   },
   {
@@ -442,7 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a list of risk factors"
+    "# create a list of risk factors\n"
    ]
   },
   {
@@ -502,7 +502,7 @@
     "He works part-time as a gnome quality inspector at a novelty garden supply warehouse. He has no family\n",
     "history of neurological disorders, though his uncle was \"a little weird\" and once tried to patent a\n",
     "cryptocurrency called DogeBonk. Cornelius reports spending 14-16 hours daily on his phone, primarily\n",
-    "watching short-form video content. He admits to a 6-year TikTok addiction prior to the 2040 ban, after\n",
+    "watching short-form video content. He admits to a 6-year TikTok addiction prior to the 2694 ban, after\n",
     "which he transitioned to \"TokTik,\" an underground clone hosted on offshore servers. He consumes\n",
     "approximately 8 energy drinks per day (\"mostly Celsius and something called 'Brainblast Xtreme'\"). He\n",
     "has not traveled recently but did attend a music festival called \"SkibidiFest 2699\" three months ago,\n",
@@ -510,8 +510,7 @@
     "that live in his walls. He denies tobacco or alcohol use but admits to \"hitting the griddy\" recreationally.\n",
     "He has been in three relationships, all of which ended due to his condition. He sleeps 3-4 hours per night,\n",
     "usually with his phone playing ASMR videos of people whispering numbers. When asked about stress, he\n",
-    "says, \"I'm not stressed, I just have a lot of enemies.\"'''\n",
-    "\n"
+    "says, \"I'm not stressed, I just have a lot of enemies.\"'''\n"
    ]
   },
   {
