--- a/lesson_2/numerical_analysis_python.ipynb
+++ b/lesson_2/numerical_analysis_python.ipynb
@@ -37,6 +37,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e11ae948",
+   "metadata": {},
+   "source": [
+    "1. Questions guiding through dataset (have chat open on the side to show how to look for functions that can help)\n",
+    "2. Cheat sheet with all the functions that were used to answer those questions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3f5c6c7b",
    "metadata": {},
