num analysis drugs

--- a/lesson_2/numerical_analysis_python.ipynb
+++ b/lesson_2/numerical_analysis_python.ipynb
@@ -73,10 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0721c2a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n",
+      "3.141592653589793\n",
+      "8.0\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the math module\n",
     "import math\n",
@@ -103,10 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3e8dc7da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "3.141592653589793\n"
+     ]
+    }
+   ],
    "source": [
     "# Import only sqrt and pi from math\n",
     "from math import sqrt, pi\n",
@@ -128,10 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "deb0ea58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Import with a nickname (very common in data science!)\n",
     "import math as m\n",
@@ -153,10 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "af754b86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "0.5028464706628877\n",
+      "red\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -181,10 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e641c3ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current date and time: 2026-01-25 19:43:45.838916\n",
+      "Today's date: 2026-01-25\n",
+      "Current time: 19:43:45.838916\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -197,30 +246,6 @@
     "\n",
     "# Get just the time\n",
     "print(\"Current time:\", now.time())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f8e0dc9",
-   "metadata": {},
-   "source": [
-    "#### 3. statistics - Basic statistical calculations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b529713",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import statistics\n",
-    "\n",
-    "data = [10, 20, 30, 40, 50]\n",
-    "\n",
-    "print(\"Mean:\", statistics.mean(data))      # Average\n",
-    "print(\"Median:\", statistics.median(data))  # Middle value\n",
-    "print(\"Stdev:\", statistics.stdev(data))    # Standard deviation"
    ]
   },
   {
