Minor suggestions for Lesson 1

--- a/lesson_1/intro-python.ipynb
+++ b/lesson_1/intro-python.ipynb
@@ -44,13 +44,10 @@
    "source": [
     "## What's Covered\n",
     "\n",
-    "This notebook will go over:\n",
-    "- print statements\n",
-    "- variables\n",
-    "- if statements\n",
-    "- for loops\n",
-    "- while loops\n",
-    "- functions"
+    "TODO: I removed the technical names of what's covered here from this section since could be overwhelming/wouldn't mean much to students yet imo. Maybe just something like 'In this lesson, we'll discuss the fundamentals of how to use Python to solve different kinds of problems. The goal is to learn how to effectively \"communicate\" instructions to a computer to ultimately solve problems and answer questions that would be hard (or even impossible!) to solve by hand.'\n",
+    "\n",
+    "Our learning objectives are as follows:\n",
+    "  1. TODO: (Would recommend thouwing in learning objectives here - helpful for future admin buy-in)"
    ]
   },
   {
@@ -233,7 +230,9 @@
     "\n",
     "This is bad. You suspect liquefactive necrosis of the brain, aka brainrot. This is the first case of brainrot since 2694 when the government banned TikTok. To provide proper treatment, you need to assess the extent and severity of the brainrot.\n",
     "\n",
-    "You recall a recent publication in *Nature* that may be relevant to Cornelius's case..."
+    "You recall a recent publication in *Nature* that may be relevant to Cornelius's case...\n",
+    "\n",
+    "TODO: I might make it more clear that the article below is fake - it might just be me but it took an embarrassingly long time for me to realize that it was not a real article lol"
    ]
   },
   {
@@ -532,6 +531,8 @@
     "\n",
     "**In simpler terms:** A function is like a recipe. Instead of writing out the full instructions every time you want to make a dish, you write the recipe once and just say \"make the dish\" whenever you need it. You give it ingredients (inputs), it follows the steps, and it gives you the finished product (output).\n",
     "\n",
+    "TODO: Another option to introduce this might be to show examples of functions in medicine, e.g., mean arterial pressure (MAP) calculation or even chadsvasc technically. I think those might be more clinically approachable than like \"actual\" math functions below.\n",
+    "\n",
     "**If you've taken math classes,** this might feel familiar. In math, you write functions like:\n",
     "\n",
     "$$f(x) = x^2 + 3$$\n",
@@ -655,7 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_1():\n",
     "    test_cases = [\n",
     "        (55, \"Bradycardia\"),\n",
@@ -736,7 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_2():\n",
     "    test_cases = [\n",
     "        (60, 30.0),\n",
@@ -815,7 +816,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_3():\n",
     "    test_cases = [\n",
     "        (15, [1, 2, \"Fever\", 4, \"Cough\", \"Fever\", 7, 8, \"Fever\", \"Cough\", 11, \"Fever\", 13, 14, \"Flu\"]),\n",
@@ -896,7 +897,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_4():\n",
     "    test_cases = [\n",
     "        (\"Xanax\", True),\n",
