--- a/lesson_1/intro-python.ipynb
+++ b/lesson_1/intro-python.ipynb
@@ -44,13 +44,13 @@
    "source": [
     "## What's Covered\n",
     "\n",
-    "This notebook will go over:\n",
-    "- print statements\n",
-    "- variables\n",
-    "- if statements\n",
-    "- for loops\n",
-    "- while loops\n",
-    "- functions"
+    "In this lesson, we'll discuss the fundamentals of how to use Python to solve different kinds of problems. The goal is to learn how to effectively \"communicate\" instructions to a computer to ultimately solve problems and answer questions that would be hard (or even impossible!) to solve by hand.\n",
+    "\n",
+    "Our learning objectives are as follows:\n",
+    "\n",
+    "1. Learning how to write basic Python code from scratch\n",
+    "2. Leveraging Google and/or LLMs when encountering obstacles\n",
+    "3. Strategies for tackling problems"
    ]
   },
   {
@@ -233,7 +233,7 @@
     "\n",
     "This is bad. You suspect liquefactive necrosis of the brain, aka brainrot. This is the first case of brainrot since 2694 when the government banned TikTok. To provide proper treatment, you need to assess the extent and severity of the brainrot.\n",
     "\n",
-    "You recall a recent publication in *Nature* that may be relevant to Cornelius's case..."
+    "You recall a (totally real) recent publication in *Nature* that may be relevant to Cornelius's case..."
    ]
   },
   {
@@ -518,10 +518,6 @@
    "id": "521ce8eb",
    "metadata": {},
    "source": [
-    "You've just finished classifying Cornelius when a nurse bursts through the door.\n",
-    "\n",
-    "\"Doc, we've got a problem. Seventeen more patients just arrived—all from SkibidiFest 2699. They're all showing symptoms.\"\n",
-    "\n",
     "Seventeen patients. Each one needs to be classified based on their episode duration. Are you going to copy and paste your if/elif/else code seventeen times? What if the classification criteria change—are you going to update it in seventeen different places?\n",
     "\n",
     "There has to be a better way. And there is: **functions**.\n",
@@ -532,20 +528,22 @@
     "\n",
     "**In simpler terms:** A function is like a recipe. Instead of writing out the full instructions every time you want to make a dish, you write the recipe once and just say \"make the dish\" whenever you need it. You give it ingredients (inputs), it follows the steps, and it gives you the finished product (output).\n",
     "\n",
-    "**If you've taken math classes,** this might feel familiar. In math, you write functions like:\n",
+    "Think about calculating **Mean Arterial Pressure (MAP)**:\n",
     "\n",
-    "$$f(x) = x^2 + 3$$\n",
+    "$$MAP = \\frac{SBP + 2 \\times DBP}{3}$$\n",
     "\n",
-    "You give it an input (x = 2), it does some work, and returns an output (f(2) = 7). Programming functions work the same way:\n",
+    "You give it **inputs** (SBP = 120, DBP = 80), it does some work, and returns an **output** (MAP = 93.3). Programming functions work the same way:\n",
     "\n",
-    "| Math | Python |\n",
-    "|------|--------|\n",
-    "| $f(x) = x² + 3$ | `def f(x): return x**2 + 3` |\n",
-    "| $f(2) = 7$ | `f(2)` returns `7` |\n",
-    "| Input: $x$ | Input: parameter |\n",
-    "| Output: $f(x)$ | Output: return value |\n",
+    "```python\n",
+    "def calculate_map(sbp, dbp):\n",
+    "    return (sbp + 2 * dbp) / 3\n",
     "\n",
-    "The only difference? Programming functions can do much more than math—they can work with text, make decisions, process lists, and more.\n",
+    "calculate_map(120, 80)   # Returns 93.3\n",
+    "calculate_map(90, 60)    # Returns 70.0\n",
+    "calculate_map(140, 90)   # Returns 106.7\n",
+    "```\n",
+    "\n",
+    "Just like you wouldn't re-derive the MAP formula every time you need it, you wouldn't re-write the same code every time either—you define it once as a function and reuse it. And unlike clinical formulas, programming functions can do much more than math—they can work with text, make decisions, process lists, and more.\n",
     "\n",
     "**Why do we need functions?**\n",
     "- **Reusability:** Write code once, use it many times\n",
@@ -593,10 +591,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "34161aa9",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b1f2e61",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# create the function classify_atiud here"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -655,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_1():\n",
     "    test_cases = [\n",
     "        (55, \"Bradycardia\"),\n",
@@ -736,7 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_2():\n",
     "    test_cases = [\n",
     "        (60, 30.0),\n",
@@ -815,7 +817,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_3():\n",
     "    test_cases = [\n",
     "        (15, [1, 2, \"Fever\", 4, \"Cough\", \"Fever\", 7, 8, \"Fever\", \"Cough\", 11, \"Fever\", 13, 14, \"Flu\"]),\n",
@@ -896,7 +898,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_4():\n",
     "    test_cases = [\n",
     "        (\"Xanax\", True),\n",
@@ -989,7 +991,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run this cell to test your solution\n",
+    "# Run this cell to test your solution. No need to change any of this code!\n",
     "def test_problem_5():\n",
     "    test_cases = [\n",
     "        # (medications, dangerous_pairs, expected)\n",
