--- a/lesson_1/intro-python.ipynb
+++ b/lesson_1/intro-python.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Introduction to Python Programming\n",
     "\n",
-    "Welcome to your first programming lesson! This guide will introduce you to Python in a friendly, approachable way. No prior coding experience needed."
+    "Welcome to your first programming lesson! This guide will introduce you to Python in a friendly, approachable way. No prior coding experience needed.\n",
+    "\n",
+    "[Google Colab Version](https://colab.research.google.com/drive/118O2XmwUsI2rK3mT2d5nlVfYi7lNRb0k?usp=sharing)"
    ]
   },
   {
